--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -5,8 +5,7 @@
     "updates": "Weekly Updates",
     "gallery": "Gallery",
     "giving": "Giving",
-    "contact": "Contact",
-    "studio": "Studio"
+    "contact": "Contact"
   },
   "hero": {
     "title": "Welcome to Little Rock Immanuel Chinese Baptist Church",
