--- a/src/locales/zh-CN/common.json
+++ b/src/locales/zh-CN/common.json
@@ -5,8 +5,7 @@
     "updates": "每週更新",
     "gallery": "教會相簿",
     "giving": "奉獻支持",
-    "contact": "聯繫我們",
-    "studio": "管理後台"
+    "contact": "聯繫我們"
   },
   "hero": {
     "title": "歡迎來到小石城以馬內利華語浸信會",
