update the home page

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -8,7 +8,7 @@
     "contact": "Contact"
   },
   "hero": {
-    "title": "Welcome to Little Rock Immanuel Chinese Baptist Church",
+    "title": "Welcome to Immanuel",
     "subtitle": "A home for faith, fellowship, and growth in Christ.",
     "cta": "Join Our Service"
   },
