--- a/src/locales/zh-CN/common.json
+++ b/src/locales/zh-CN/common.json
@@ -8,7 +8,7 @@
     "contact": "聯繫我們"
   },
   "hero": {
-    "title": "歡迎來到小石城以馬內利華語浸信會",
+    "title": "歡迎來到 以馬內利",
     "subtitle": "一個信仰、團契和在基督裏成長的家。",
     "cta": "加入崇拜"
   },
