update the mechanism of gallery

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -205,7 +205,8 @@
       "worship": "Worship",
       "others": "Others"
     },
-    "backToList": "Back to Gallery List"
+    "backToList": "Back to Gallery List",
+    "viewFullAlbum": "View More Photos"
   },
   "giving": {
     "title": "Giving",
