--- a/src/locales/zh-CN/common.json
+++ b/src/locales/zh-CN/common.json
@@ -205,7 +205,8 @@
       "worship": "主日崇拜",
       "others": "其他"
     },
-    "backToList": "返回相簿列表"
+    "backToList": "返回相簿列表",
+    "viewFullAlbum": "查看更多相片"
   },
   "giving": {
     "title": "奉獻支持",
