add faith page link

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -119,8 +119,8 @@
     "faith": {
       "title": "Our Faith",
       "subtitle": "The church adheres to the tenets of Baptist faith.",
-      "downloadText": "For detailed content, please download:",
-      "downloadLink": "Baptist Faith Message",
+      "downloadText": "For detailed content, please view:",
+      "downloadLink": "Baptist Faith and Message 2000",
       "beliefs": [
         {
           "title": "The Triune God",
