--- a/src/locales/zh-CN/common.json
+++ b/src/locales/zh-CN/common.json
@@ -119,8 +119,8 @@
     "faith": {
       "title": "我們的信仰",
       "subtitle": "我們教會秉承浸信會信仰精意。",
-      "downloadText": "詳細內容請下載：",
-      "downloadLink": "浸信會信仰與信息",
+      "downloadText": "詳細內容請查看：",
+      "downloadLink": "2000浸信會信仰與信息",
       "beliefs": [
         {
           "title": "三一真神",
